--- a/index.html
+++ b/index.html
@@ -3,12 +3,28 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <meta http-equiv="X-UA-Compatible" content="ie=edge">
-    <title>Document</title>
+
+    <link href="https://fonts.googleapis.com/css?family=Lato:100,300,400,700,900" rel="stylesheet">
+
+    <link rel="stylesheet" href="css/icon-font.css">
+    <link rel="stylesheet" href="css/style.css">
+    <!-- <link rel="shortcut icon" type="image/png" href="img/favicon.png"> -->
+
+    <link rel="icon" type="image/x-con" href="img/favicon.ico">
+
+    <link rel="apple-touch-icon" sizes="180x180" href="img/apple-touch-icon.png">
+
+    <link rel="icon" type="image/png" sizes="32x32" href="img/favicon-32x32.png">
+
+    <link rel="icon" type="image/png" sizes="16x16" href="img/favicon-16x16.png">
+
+    <link rel="manifest" href="img/site.webmanifest">
+
+    <title>R | YOUNG</title>
 </head>
 <body>
-    <header>
-
+    <header class="header">
+        <h1>Test</h1>
     </header>
     <main>
         <section>
