--- a/index.html
+++ b/index.html
@@ -31,8 +31,23 @@
 
         </section>
     </main>
-    <footer>
+    <footer class="footer">
+        <div class="footer__logo-box">
+            <img src="img/android-chrome-192x192.png" alt="Full logo" class="footer__logo">
+            <div class="row">
+                <div class="col-1-of-2">
+                <p>Contact</p>
+                </div>
+                <div class="col-1-of-2">
+                    <p class="footer__copyright">
+                    &#169; R Young 2019
+                    </p>
+                </div>
+                <!-- <div class="col-1-of-3">
 
+                </div> -->
+            </div>
+        </div>
     </footer>
 </body>
 </html>
