--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
 
+    <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.6.3/css/all.css" integrity="sha384-UHRtZLI+pbxtHCWp1t77Bi1L4ZtiqrqD80Kn4Z8NTSRyMA2Fd33n5dQ8lWUE00s/" crossorigin="anonymous">
     <link href="https://fonts.googleapis.com/css?family=Lato:100,300,400,700,900" rel="stylesheet">
 
     <link rel="stylesheet" href="css/icon-font.css">
@@ -35,14 +36,27 @@
         <div class="footer__logo-box">
             <img src="img/android-chrome-192x192.png" alt="Full logo" class="footer__logo">
             <div class="row">
-                <div class="col-1-of-2">
+                <div class="col-1-of-3">
                 <p>Contact</p>
                 </div>
-                <div class="col-1-of-2">
+                <div class="col-1-of-3">
                     <p class="footer__copyright">
                     &#169; R Young 2019
                     </p>
                 </div>
+                <div class="col-1-of-3">
+                    <a href="https://www.linkedin.com/in/ronnie-young89/" class="outside-link" target="_blank">
+                        <i class="fab fa-linkedin">
+
+                        </i>
+                    </a>
+                    <a href="mailto:rryoung89@gmail.com" class="outside-link">
+                            <i class="fas fa-envelope">
+
+                            </i>
+                        </a>
+                </div>
+
                 <!-- <div class="col-1-of-3">
 
                 </div> -->
