--- a/index.html
+++ b/index.html
@@ -1,11 +1,16 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
 
-    <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.6.3/css/all.css" integrity="sha384-UHRtZLI+pbxtHCWp1t77Bi1L4ZtiqrqD80Kn4Z8NTSRyMA2Fd33n5dQ8lWUE00s/" crossorigin="anonymous">
+    <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.6.3/css/all.css" integrity="sha384-UHRtZLI+pbxtHCWp1t77Bi1L4ZtiqrqD80Kn4Z8NTSRyMA2Fd33n5dQ8lWUE00s/"
+        crossorigin="anonymous">
     <link href="https://fonts.googleapis.com/css?family=Lato:100,300,400,700,900" rel="stylesheet">
+
+    <!-- PROGRESS BAR -->
+
 
     <link rel="stylesheet" href="css/icon-font.css">
     <link rel="stylesheet" href="css/style.css">
@@ -23,45 +28,184 @@
 
     <title>R | YOUNG</title>
 </head>
+
 <body>
+    <!-- <progress value="0"></progress> -->
     <header class="header">
         <h1>Test</h1>
     </header>
     <main>
-        <section>
-
+        <section class="section-about">
+            <div class="u-center-text u-margin-bottom-big">
+                <h2 class="heading-secondary">
+                    Technologies
+                </h2>
+                <div class="row">
+                    <div class="col-1-of-4">
+                        <div class="tech-box">
+                            <i class="tech-box__icon fab fa-html5"></i>
+                            <h3 class="heading-tertiary u-margin-bottom-small">HTML</h3>
+                            <p class="tech-box__text">
+                                Fuga quae consectetur aut enim commodi hic deserunt quis laudantium, molestiae iusto
+                                esse
+                                tempora unde pariatur blanditiis asperiores labore neque quia veritatis!
+                            </p>
+                        </div>
+                    </div>
+                    <div class="col-1-of-4">
+                        <div class="tech-box">
+                            <i class="tech-box__icon fab fa-css3-alt"></i>
+                            <h3 class="heading-tertiary u-margin-bottom-small">CSS</h3>
+                            <p class="tech-box__text">
+                                Fuga quae consectetur aut enim commodi hic deserunt quis laudantium, molestiae iusto
+                                esse
+                                tempora unde pariatur blanditiis asperiores labore neque quia veritatis!
+                            </p>
+                        </div>
+                    </div>
+                    <div class="col-1-of-4">
+                        <div class="tech-box">
+                            <i class="tech-box__icon fab fa-js"></i>
+                            <h3 class="heading-tertiary u-margin-bottom-small">Javascript</h3>
+                            <p class="tech-box__text">
+                                Fuga quae consectetur aut enim commodi hic deserunt quis laudantium, molestiae iusto
+                                esse
+                                tempora unde pariatur blanditiis asperiores labore neque quia veritatis!
+                            </p>
+                        </div>
+                    </div>
+                    <div class="col-1-of-4">
+                        <div class="tech-box">
+                            <i class="tech-box__icon fab fa-react"></i>
+                            <h3 class="heading-tertiary u-margin-bottom-small">ReactJS</h3>
+                            <p class="tech-box__text">
+                                Fuga quae consectetur aut enim commodi hic deserunt quis laudantium, molestiae iusto
+                                esse
+                                tempora unde pariatur blanditiis asperiores labore neque quia veritatis!
+                            </p>
+                        </div>
+                    </div>
+                </div>
+                <div class="row">
+                    <div class="col-1-of-4">
+                        <div class="tech-box">
+                            <i class="tech-box__icon fab fa-python"></i>
+                            <h3 class="heading-tertiary u-margin-bottom-small">Python</h3>
+                            <p class="tech-box__text">
+                                Fuga quae consectetur aut enim commodi hic deserunt quis laudantium, molestiae iusto
+                                esse
+                                tempora unde pariatur blanditiis asperiores labore neque quia veritatis!
+                            </p>
+                        </div>
+                    </div>
+                    <div class="col-1-of-4">
+                        <div class="tech-box">
+                            <i class="tech-box__icon far fa-heart"></i>
+                            <h3 class="heading-tertiary u-margin-bottom-small">Django</h3>
+                            <p class="tech-box__text">
+                                Fuga quae consectetur aut enim commodi hic deserunt quis laudantium, molestiae iusto
+                                esse
+                                tempora unde pariatur blanditiis asperiores labore neque quia veritatis!
+                            </p>
+                        </div>
+                    </div>
+                    <div class="col-1-of-4">
+                        <div class="tech-box">
+                            <i class="tech-box__icon fas fa-database"></i>
+                            <h3 class="heading-tertiary u-margin-bottom-small">APIs</h3>
+                            <p class="tech-box__text">
+                                Fuga quae consectetur aut enim commodi hic deserunt quis laudantium, molestiae iusto
+                                esse
+                                tempora unde pariatur blanditiis asperiores labore neque quia veritatis!
+                            </p>
+                        </div>
+                    </div>
+                    <div class="col-1-of-4">
+                        <div class="tech-box">
+                            <i class="tech-box__icon fas fa-stroopwafel"></i>
+                            <h3 class="heading-tertiary u-margin-bottom-small">Object Oriented Programming</h3>
+                            <p class="tech-box__text">
+                                Fuga quae consectetur aut enim commodi hic deserunt quis laudantium, molestiae iusto
+                                esse
+                                tempora unde pariatur blanditiis asperiores labore neque quia veritatis!
+                            </p>
+                        </div>
+                    </div>
+                </div>
+                <div class="row">
+                    <div class="col-1-of-4">
+                        <div class="tech-box">
+                                <i class="tech-box__icon fas fa-torii-gate"></i>
+                            <h3 class="heading-tertiary u-margin-bottom-small">Test Driven Development</h3>
+                            <p class="tech-box__text">
+                                Fuga quae consectetur aut enim commodi hic deserunt quis laudantium, molestiae iusto
+                                esse
+                                tempora unde pariatur blanditiis asperiores labore neque quia veritatis!
+                            </p>
+                        </div>
+                    </div>
+                    <div class="col-1-of-4">
+                        <div class="tech-box">
+                                <i class="tech-box__icon fab fa-git"></i>
+                            <h3 class="heading-tertiary u-margin-bottom-small">GIT</h3>
+                            <p class="tech-box__text">
+                                Fuga quae consectetur aut enim commodi hic deserunt quis laudantium, molestiae iusto
+                                esse
+                                tempora unde pariatur blanditiis asperiores labore neque quia veritatis!
+                            </p>
+                        </div>
+                    </div>
+                    <div class="col-1-of-4">
+                        <div class="tech-box">
+                            <i class="tech-box__icon fas fa-mobile-alt"></i>
+                            <h3 class="heading-tertiary u-margin-bottom-small">Swift</h3>
+                            <p class="tech-box__text">
+                                Fuga quae consectetur aut enim commodi hic deserunt quis laudantium, molestiae iusto
+                                esse
+                                tempora unde pariatur blanditiis asperiores labore neque quia veritatis!
+                            </p>
+                        </div>
+                    </div>
+                    <div class="col-1-of-4">
+                        <div class="tech-box">
+                            <i class="tech-box__icon fab fa-gitkraken"></i>
+                            <h3 class="heading-tertiary u-margin-bottom-small">Others</h3>
+                            <p class="tech-box__text">
+                                Fuga quae consectetur aut enim commodi hic deserunt quis laudantium, molestiae iusto
+                                esse
+                                tempora unde pariatur blanditiis asperiores labore neque quia veritatis!
+                            </p>
+                        </div>
+                    </div>
+                </div>
+            </div>
         </section>
     </main>
     <footer class="footer">
         <div class="footer__logo-box">
             <img src="img/android-chrome-192x192.png" alt="Full logo" class="footer__logo">
             <div class="row">
-                <div class="col-1-of-3">
-                <p>Contact</p>
-                </div>
-                <div class="col-1-of-3">
-                    <p class="footer__copyright">
+                <a href="https://www.linkedin.com/in/ronnie-young89/" class="outside-link" target="_blank">
+                    <i class="fab fab-footer fa-linkedin">
+
+                    </i>
+                </a>
+                <a href="https://github.com/Ryoung27" class="outside-link" target="_blank">
+                    <i class="fab fab-footer fa-github-square">
+
+                    </i>
+                </a>
+                <a href="mailto:rryoung89@gmail.com" class="outside-link">
+                    <i class="fas fas-footer fa-envelope">
+
+                    </i>
+                </a>
+                <p class="footer__copyright">
                     &#169; R Young 2019
-                    </p>
-                </div>
-                <div class="col-1-of-3">
-                    <a href="https://www.linkedin.com/in/ronnie-young89/" class="outside-link" target="_blank">
-                        <i class="fab fa-linkedin">
-
-                        </i>
-                    </a>
-                    <a href="mailto:rryoung89@gmail.com" class="outside-link">
-                            <i class="fas fa-envelope">
-
-                            </i>
-                        </a>
-                </div>
-
-                <!-- <div class="col-1-of-3">
-
-                </div> -->
+                </p>
             </div>
         </div>
     </footer>
 </body>
+
 </html>
