--- a/index.html
+++ b/index.html
@@ -35,6 +35,14 @@
         <h1>Test</h1>
     </header>
     <main>
+        <section class="section-projects" id="section-projects">
+            <div class="u-center-text u-margin-bottom-big">
+                <h2 class="heading-projects">
+                    My Projects
+                </h2>
+            </div>
+        </section>
+
         <section class="section-about">
             <div class="u-center-text u-margin-bottom-big">
                 <h2 class="heading-secondary">
