--- a/index.html
+++ b/index.html
@@ -41,6 +41,41 @@
                     My Projects
                 </h2>
             </div>
+            <div class="row">
+                    <div class="col-1-of-3">
+                       <div class="card">
+                           <div class="card__side card__side--front">
+                                <div class="card__picture card__picture--1">
+                                    &nbsp;
+                                </div>
+
+                                <div class="card__details">
+                                    <ul>
+                                        <li>React</li>
+                                        <li>APIs</li>
+                                        <li>Bootstrap</li>
+                                        <li>4 Weeks</li>
+                                        <li>Difficulty: Hard</li>
+                                    </ul>
+                                </div>
+                           </div>
+                           <div class="card__side card__side--back card__side--back-1">
+                                <div class="card__cta">
+                                    <div class="card__price-box">
+                                        <p class="card__price-value">Allbeta: Budget</p>
+                                        <p class="card__price-only">This was my first big solo project. I goofed off for the two weeks that were given and had to make up for it on vacation, but in the end it was worth it to have created something that could have replaced me at my old job.</p>
+
+                                    </div>
+                                </div>
+                            </div>
+                       </div>
+                    </div>
+                    </div>
+
+
+
+
+
         </section>
 
         <section class="section-about">
