--- a/index.html
+++ b/index.html
@@ -30,7 +30,6 @@
 </head>
 
 <body>
-    <!-- <progress value="0"></progress> -->
     <header class="header">
         <h1>Test</h1>
     </header>
@@ -42,35 +41,196 @@
                 </h2>
             </div>
             <div class="row">
-                    <div class="col-1-of-3">
-                       <div class="card">
-                           <div class="card__side card__side--front">
-                                <div class="card__picture card__picture--1">
-                                    &nbsp;
-                                </div>
+                <div class="col-1-of-3">
+                    <div class="card">
+                        <div class="card__side card__side--front">
+                            <div class="card__picture card__picture--0">
+                                &nbsp;
+                            </div>
 
-                                <div class="card__details">
-                                    <ul>
-                                        <li>React</li>
-                                        <li>APIs</li>
-                                        <li>Bootstrap</li>
-                                        <li>4 Weeks</li>
-                                        <li>Difficulty: Hard</li>
-                                    </ul>
-                                </div>
-                           </div>
-                           <div class="card__side card__side--back card__side--back-1">
-                                <div class="card__cta">
-                                    <div class="card__price-box">
-                                        <p class="card__price-value">Allbeta: Budget</p>
-                                        <p class="card__price-only">This was my first big solo project. I goofed off for the two weeks that were given and had to make up for it on vacation, but in the end it was worth it to have created something that could have replaced me at my old job.</p>
+                            <div class="card__details">
+                                <ul>
+                                    <li>HTML, CSS, Javascript</li>
+                                    <li>CSS</li>
+                                    <li>Javascript</li>
+                                    <li>Development</li>
+                                    <li>Parralex</li>
+                                </ul>
+                            </div>
+                        </div>
+                        <div class="card__side card__side--back card__side--back-1">
+                            <div class="card__cta">
+                                <div class="card__price-box">
+                                    <p class="card__price-value">My own personal site</p>
+                                    <p class="card__price-only">This was the first development I ever did. I was
+                                        sitting in a bank all day not doing much at all, expect hanging out and doing
+                                        whatever work came my way. I wanted more and now I have it. I created this to
+                                        see if I could and it was my baby, right up until I wanted to redo it for 2019.
+                                        I learned everything from building this site from html, css, to DigitalOcean
+                                        Virtual Machines.</p>
 
-                                    </div>
                                 </div>
                             </div>
-                       </div>
+                        </div>
                     </div>
+                </div>
+                <div class="col-1-of-3">
+                    <div class="card">
+                        <div class="card__side card__side--front">
+                            <div class="card__picture card__picture--1">
+                                &nbsp;
+                            </div>
+
+                            <div class="card__details">
+                                <ul>
+                                    <li>React</li>
+                                    <li>APIs</li>
+                                    <li>Bootstrap</li>
+                                    <li>4 Weeks</li>
+                                    <li>Difficulty: Hard</li>
+                                </ul>
+                            </div>
+                        </div>
+                        <div class="card__side card__side--back card__side--back-1">
+                            <div class="card__cta">
+                                <div class="card__price-box">
+                                    <p class="card__price-value">Allbeta: Budget</p>
+                                    <p class="card__price-only">This was my first big solo project. I goofed off for
+                                        the two weeks that were given and had to make up for it on vacation, but in the
+                                        end it was worth it to have created something that could have replaced me at my
+                                        old job.</p>
+
+                                </div>
+                            </div>
+                        </div>
                     </div>
+                </div>
+                <div class="col-1-of-3">
+                    <div class="card">
+                        <div class="card__side card__side--front">
+                            <div class="card__picture card__picture--2">
+                                &nbsp;
+                            </div>
+
+                            <div class="card__details">
+                                <ul>
+                                    <li>Django</li>
+                                    <li>APIs</li>
+                                    <li>Bootstrap</li>
+                                    <li>1 Week</li>
+                                    <li>Difficulty: Medium</li>
+                                </ul>
+                            </div>
+                        </div>
+                        <div class="card__side card__side--back card__side--back-1">
+                            <div class="card__cta">
+                                <div class="card__price-box">
+                                    <p class="card__price-value">Run for It!</p>
+                                    <p class="card__price-only">This was my second big solo project and my final at
+                                        Nashville Software School. I loved this one, probably because I still had the
+                                        fear from falling behind of the first one. I got it done ASAP and really
+                                        learned a lot about Django.</p>
+
+                                </div>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+            </div>
+            <div class="row">
+                <div class="col-1-of-3">
+                    <div class="card">
+                        <div class="card__side card__side--front">
+                            <div class="card__picture card__picture--3">
+                                &nbsp;
+                            </div>
+
+                            <div class="card__details">
+                                <ul>
+                                    <li>React</li>
+                                    <li>APIs</li>
+                                    <li>Bootstrap</li>
+                                    <li>Udemy</li>
+                                    <li>Difficulty: Medium</li>
+                                </ul>
+                            </div>
+                        </div>
+                        <div class="card__side card__side--back card__side--back-1">
+                            <div class="card__cta">
+                                <div class="card__price-box">
+                                    <p class="card__price-value">Robo Pals</p>
+                                    <p class="card__price-only">This was the final project for Andrei Neagoie's Udemy
+                                        course. This course refreshed a lot of the things I learned at Nashville
+                                        Software School and brought me up to speed on using other people's APIs and
+                                        keys. It also introduced me to NodeJS.</p>
+
+                                </div>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+                <div class="col-1-of-3">
+                    <div class="card">
+                        <div class="card__side card__side--front">
+                            <div class="card__picture card__picture--4">
+                                &nbsp;
+                            </div>
+
+                            <div class="card__details">
+                                <ul>
+                                    <li>SASS</li>
+                                    <li>Design</li>
+                                    <li>Responsive Design</li>
+                                    <li>Udemy</li>
+                                    <li>Difficulty: Medium</li>
+                                </ul>
+                            </div>
+                        </div>
+                        <div class="card__side card__side--back card__side--back-1">
+                            <div class="card__cta">
+                                <div class="card__price-box">
+                                    <p class="card__price-value">Natours</p>
+                                    <p class="card__price-only">This was the project for Jonas Schmedtmann's Natours
+                                        course. He designed and built a beautiful site, while teaching SASS. It
+                                        actually inspired a ton of this site and I would highly recommend it to anyone
+                                        wanting to delve deeper into design and SASS.</p>
+
+                                </div>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+                <div class="col-1-of-3">
+                    <div class="card">
+                        <div class="card__side card__side--front">
+                            <div class="card__picture card__picture--5">
+                                &nbsp;
+                            </div>
+
+                            <div class="card__details">
+                                <ul>
+                                    <li>New Personal Site</li>
+                                    <li>Design</li>
+                                    <li>SASS</li>
+                                </ul>
+                            </div>
+                        </div>
+                        <div class="card__side card__side--back card__side--back-1">
+                            <div class="card__cta">
+                                <div class="card__price-box">
+                                    <p class="card__price-value">RRYoung</p>
+                                    <p class="card__price-only">This is my new site. I designed it after taking a ton
+                                        of online courses. I dig it, but want to improve it and add a blog. I did this
+                                        on January first 2019 and would like to do something every day for the year.
+                                        Thanks for checking it out.</p>
+
+                                </div>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+
+            </div>
 
 
 
@@ -178,7 +338,7 @@
                 <div class="row">
                     <div class="col-1-of-4">
                         <div class="tech-box">
-                                <i class="tech-box__icon fas fa-torii-gate"></i>
+                            <i class="tech-box__icon fas fa-torii-gate"></i>
                             <h3 class="heading-tertiary u-margin-bottom-small">Test Driven Development</h3>
                             <p class="tech-box__text">
                                 Fuga quae consectetur aut enim commodi hic deserunt quis laudantium, molestiae iusto
@@ -189,7 +349,7 @@
                     </div>
                     <div class="col-1-of-4">
                         <div class="tech-box">
-                                <i class="tech-box__icon fab fa-git"></i>
+                            <i class="tech-box__icon fab fa-git"></i>
                             <h3 class="heading-tertiary u-margin-bottom-small">GIT</h3>
                             <p class="tech-box__text">
                                 Fuga quae consectetur aut enim commodi hic deserunt quis laudantium, molestiae iusto
