--- a/index.html
+++ b/index.html
@@ -31,9 +31,33 @@
 
 <body>
     <header class="header">
-        <h1>Test</h1>
+            <header class="header">
+                    <div class="header__logo-box">
+                        <img src="img/favicon.ico" alt="Logo" class="header__logo">
+                    </div>
     </header>
     <main>
+        <section class="section-about">
+                <div class="u-center-text u-margin-bottom-big">
+                        <h2 class="heading-secondary">
+                            About Me
+                        </h2>
+                    <div class="row">
+                            <div class="col-1-of-2">
+                                <h3 class="heading-tertiary u-margin-bottom-small">
+                                    If You Are Reading This
+                                </h3>
+                                <p class="paragraph">
+                                    My name is Ronnie Young and thanks for checking out my personal site. It is built with basic HTML, CSS, and Javascript. I used SASS for the design, which created the CSS. If you are a potential employeer I have listed some of the technologies I am familar with below and if you have any questions feel free to reach out my contact information is in the footer.
+                                </p>
+                                <h3 class="heading-tertiary u-margin-bottom-small">
+                                    A Little about Me
+                                </h3>
+                                <p class="paragraph">
+                                    My name is Ronnie Young I am 29 and live in Nashville Tennessee. Before this I lived in Kansas City and worked in banking. Before that I lived in East Tennessee and went to The University of Tennessee. I have spent a ton of my life learning and am ready to apply a bunch of that and probably pick up a new thing or two.
+                                </p>
+                            </div>
+        </section>
         <section class="section-projects" id="section-projects">
             <div class="u-center-text u-margin-bottom-big">
                 <h2 class="heading-projects">
