--- a/index.html
+++ b/index.html
@@ -30,7 +30,15 @@
 </head>
 
 <body>
-    <header class="header">
+    <header class="header" id="top">
+        <nav class="header--navbar">
+            <ul class="header--ul">
+                <li class="header--li"><a href="#top">About</a></li>
+                <li class="header--li"><a href="#projects">Projects</a></li>
+                <li class="header--li"><a href="#technologies">Technologies</a></li>
+                <li class="header--li"><a href="#footer">Contact Information</a></li>
+            </ul>
+        </nav>
             <header class="header">
                     <div class="header__logo-box">
                         <img src="img/favicon.ico" alt="Logo" class="header__logo">
@@ -60,7 +68,7 @@
         </section>
         <section class="section-projects" id="section-projects">
             <div class="u-center-text u-margin-bottom-big">
-                <h2 class="heading-projects">
+                <h2 class="heading-projects" id="projects">
                     My Projects
                 </h2>
             </div>
@@ -264,7 +272,7 @@
 
         <section class="section-about">
             <div class="u-center-text u-margin-bottom-big">
-                <h2 class="heading-secondary">
+                <h2 class="heading-secondary" id="technologies">
                     Technologies
                 </h2>
                 <div class="row">
@@ -408,7 +416,7 @@
             </div>
         </section>
     </main>
-    <footer class="footer">
+    <footer class="footer" id="footer">
         <div class="footer__logo-box">
             <img src="img/android-chrome-192x192.png" alt="Full logo" class="footer__logo">
             <div class="row">
